removed overflow bug in mobile

--- a/src/Styles/Splash.css
+++ b/src/Styles/Splash.css
@@ -45,5 +45,5 @@
 }
 
 body {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
